force-app/main/default/objects/BrillioFC__User__c/BrillioFC__User__c.object-meta.xml
<CustomObject>
    <label>ForceClinic User</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>ForceClinic User Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ForceClinic Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>