force-app/main/default/objects/BrillioFC__User__c/fields/BrillioFC__Full_Name__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Full_Name__c</fullName>
    <label>Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>