force-app/main/default/objects/BrillioFC__User__c/fields/BrillioFC__Live_Agent_User__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Live_Agent_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Live Agent User</label>
    <type>Checkbox</type>
</CustomField>