force-app/main/default/objects/BrillioFC__User__c/fields/BrillioFC__Portal_Enabled__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Portal_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Portal Enabled</label>
    <type>Checkbox</type>
</CustomField>