force-app/main/default/objects/BrillioFC__User__c/fields/BrillioFC__Support_User__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Support_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Support User</label>
    <type>Checkbox</type>
</CustomField>