force-app/main/default/objects/BrillioFC__User__c/fields/BrillioFC__User_Type__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__User_Type__c</fullName>
    <label>User Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>